dokončeni asi všeho, přidani interface Idatabaze která spoji SQLdatabaze a spravce souboru jelikož dělai velmi podobne věci