@@ -1,61 +1,63 @@
 package databaze;
 
-import sql.SQLDatabaze;
 import studenti.Student;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
 public class DatabazeStudentu {
-    private Map<Integer, Student> studenti;
-    private int dalsiID;
-    private final SQLDatabaze sqlDatabaze;
-
-    public DatabazeStudentu() {
-        this.studenti = new HashMap<>();
-        this.sqlDatabaze = new SQLDatabaze();
-        this.dalsiID = 1;
-    }
+    private Map<Integer, Student> studenti = new HashMap<>();
+    private int dalsiID = 1;
 
     public void pridejStudenta(Student s) {
-        studenti.put(s.getID(), s);
-        if (s.getID() >= dalsiID) {
-            dalsiID++;
+        studenti.put(s.getId(), s);
+        if (s.getId() >= dalsiID) {
+            dalsiID = s.getId() + 1;
         }
+    }
+    public Student najdiStudenta(int id) {
+        return studenti.get(id);
     }
 
     public void odeberStudenta(int id) {
         studenti.remove(id);
     }
 
-    public Student najdiStudenta(int id) {
-        return studenti.get(id);
+    public List<Student> vratVsechnyStudenty() {
+        return new ArrayList<>(studenti.values());
     }
 
-    public Collection<Student> getVsechnyStudenty() {
-        return studenti.values();
-    }
-
-    public int generujId() {
-        return dalsiID++;
+    public List<Student> najdiPodlePrijmeni(String prijmeni) {
+        return studenti.values().stream()
+                .filter(s -> s.getPrijmeni().equalsIgnoreCase(prijmeni))
+                .collect(Collectors.toList());
     }
 
     public List<Student> seradPodlePrijmeni() {
-        return studenti.values().stream().sorted(Comparator.comparing(Student::getPrijmeni)).toList();
+        return studenti.values().stream()
+                .sorted(Comparator.comparing(Student::getPrijmeni))
+                .collect(Collectors.toList());
     }
 
     public double prumerOboru(Class<? extends Student> typ) {
-        return studenti.values().stream().filter(typ::isInstance).mapToDouble(Student::getStudijniPrumer).average().orElse(0.0);
+        return studenti.values().stream()
+                .filter(typ::isInstance)
+                .mapToDouble(Student::getStudijniPrumer)
+                .average()
+                .orElse(0.0);
     }
 
     public long pocetStudentuOboru(Class<? extends Student> typ) {
-        return studenti.values().stream().filter(typ::isInstance).count();
+        return studenti.values().stream()
+                .filter(typ::isInstance)
+                .count();
     }
 
-    public void ulozDoDatabaze() {
-        sqlDatabaze.ulozStudenty(this);
+    public void ulozDoDatabaze(IDatabaze sqlDatabaze) {
+        sqlDatabaze.ulozStudenty(vratVsechnyStudenty());
     }
 
-    public void nactiZDatabaze() {
+    public void nactiZDatabaze(IDatabaze sqlDatabaze) {
         List<Student> nacteni = sqlDatabaze.nactiStudenty();
         studenti.clear();
         for (Student s : nacteni) {
